Base laravel structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-.idea/workspace.xml
-~$A5.docx
-~$A6.docx
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
