--- a/.env
+++ b/.env
@@ -12,6 +12,12 @@ DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=pg!fcp
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=25
+MAIL_USERNAME=fc2e43d7a46b43
+MAIL_PASSWORD=a09235c7146cee
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
