--- a/.env_production
+++ b/.env_production
@@ -8,6 +8,12 @@ DB_CONNECTION=pgsql
 DB_HOST=dbm.fe.up.pt
 DB_PORT=5432
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=25
+MAIL_USERNAME=fc2e43d7a46b43
+MAIL_PASSWORD=a09235c7146cee
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
